# asciidocstring

./: .gitignore  CHANGELOG.adoc  LICENSE  README.adoc  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
src/asciidocstring/: __init__.py  document.py  py.typed  visitors.py
tests/: test_extractor.py  test_parser.py  test_renderer.py
