[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asciidocstring"
dynamic = ["version"]
description = "A semantic parser and converter for Python docstrings written in AsciiDoc"
readme = "README.adoc"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "webmaven" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "asciidoctrine==0.1.0a2",
    "lark==1.3.1",
]

[project.urls]
Homepage = "https://github.com/webmaven/asciidocstring"

[tool.hatch.version]
path = "src/asciidocstring/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/asciidocstring"]

[tool.ruff]
line-length = 88
target-version = "py313"  # Ruff supports target version up to current stable
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
pretty = true
